--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,3 +1,6 @@
- body {
-     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
- }
+/**
+ * Main styles file
+ */
+
+@import 'variables';
+@import 'layout';
